gcc/testsuite/g++.dg/cpp0x/variadic60.C
template<typename... Args> class tuple; // { dg-error "variadic templates" "" { target c++98 } }
